--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@interfaces": ["src/app/@interfaces"],
+      "@interfaces/*": ["src/app/@interfaces/*"],
+      "@env/*": ["src/environments/*"]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
