--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "@app/*": ["src/app/*"],
       "@interfaces": ["src/app/@interfaces"],
       "@interfaces/*": ["src/app/@interfaces/*"],
+      "@services": ["src/app/@services"],
+      "@services/*": ["src/app/@sercices/*"],
       "@env/*": ["src/environments/*"]
     },
     "outDir": "./dist/out-tsc",
