--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "@interfaces/*": ["src/app/@interfaces/*"],
       "@services": ["src/app/@services"],
       "@services/*": ["src/app/@sercices/*"],
+      "@shared": ["src/app/@shared"],
+      "@shared/*": ["src/app/@shared/*"],
       "@env/*": ["src/environments/*"]
     },
     "outDir": "./dist/out-tsc",
